# fichub-api

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
examples/: get_metadata_from_links.py
fichub_api/: __init__.py  api.py  models.py  types.py
tests/: test.py  test_api.py
