[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "fichub_api"
description = "A small asynchronous wrapper for the FicHub API, made to retrieve story metadata and download stories from various websites."
requires-python = ">=3.8"
version = "0.2.2"
authors = [{ name = "Sachaa-Thanasius", email = "111999343+Sachaa-Thanasius@users.noreply.github.com" }]
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["python", "python-3", "fichub", "webfiction-metadata"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: aiohttp",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.package-data]
"fichub_api" = ["py.typed"]

[project.urls]
Homepage = "https://github.com/Sachaa-Thanasius/fichub-api"
"Bug Tracker" = "https://github.com/Sachaa-Thanasius/fichub-api/issues"

[tool.black]
line-length = 120
target-version = ["py38", "py39", "py310", "py311"]

[tool.ruff]
line-length = 120
target-version = "py38"
select = [
    "F",
    "E",
    "I",
    "UP",
    "YTT",
    "ANN",
    "S",
    "BLE",
    "B",
    "A",
    "COM",
    "C4",
    "DTZ",
    "EM",
    "ISC",
    "G",
    "INP",
    "PIE",
    "T20",
    "Q003",
    "RSE",
    "RET",
    "SIM",
    "TID",
    "PTH",
    "ERA",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "TRY",
    "RUF",
]
ignore = [
    "G002",    # Erroneous issue with %-logging when logging can be configured for % logging.
    "S101",    # Use of assert here is a known quantity. Blame typing memes.
    "PLR2004", # Magic value comparison. May remove later.
    "SIM105",  # Suppressable exception. I'm not paying the overhead of contextlib.suppress for stylistic choices.
    "C90",     # McCabe complexity memes.
    "PLR0912", # Number of branches is more than 12.
    "PLR0913", # Some functions require more than 5 arguments.
    "ANN101",  # Type of self is implicit.
    "ANN102",  # Type of cls is implicit.
    "ANN401",  # Need Any for args and kwargs in some places.
    "A003",    # Shadowing some builtin names.
    "PD",      # Pandas isn't relevant for this project.
    "NPY",     # Numpy isn't relevant for this project.
]
unfixable = [
    "ERA", # I don't want anything erroneously detected deleted by this.
]

[tool.ruff.per-file-ignores]
"examples/*.py" = ["INP001", "T201"] # Leave the examples alone.
"tests/*.py" = ["INP001", "T201"]    # Leave the tests alone.

[tool.ruff.isort]
lines-after-imports = 2
combine-as-imports = true

[tool.pyright]
include = ["fichub_api", "tests"]

pythonVersion = "3.8"
typeCheckingMode = "strict"
reportPropertyTypeMismatch = "warning"
reportUnnecessaryTypeIgnoreComment = "warning"
