[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "fichub_api"
description = "A small asynchronous wrapper for the FicHub API, made to retrieve story metadata and download stories from various websites."
requires-python = ">=3.8"
version = "0.2.4"
authors = [
    { name = "Sachaa-Thanasius", email = "111999343+Sachaa-Thanasius@users.noreply.github.com" },
]
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["python", "python-3", "fichub", "webfiction-metadata"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: aiohttp",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = ["aiohttp >= 3.8", "msgspec"]

[project.optional-dependencies]
dev = ["typing-extensions", "pytest", "pytest-asyncio"]

[tool.setuptools.package-data]
"fichub_api" = ["py.typed"]

[project.urls]
Homepage = "https://github.com/Sachaa-Thanasius/fichub-api"
Issues = "https://github.com/Sachaa-Thanasius/fichub-api/issues"

[tool.ruff]
include = ["fichub_api/*"]
line-length = 120
target-version = "py38"

[tool.ruff.lint]
select = [
    "F",
    "E",
    "I",
    "UP",
    "YTT",
    "ANN",
    "S",
    "BLE",
    "B",
    "A",
    "COM",
    "C4",
    "DTZ",
    "EM",
    "ISC",
    "G",
    "INP",
    "PIE",
    "T20",
    "PYI",
    "RSE",
    "RET",
    "SIM",
    "TID",
    "PTH",
    "ERA",
    "PD",
    "PL",
    "TRY",
    "NPY",
    "RUF",
]
ignore = [
    "G002",    # Erroneous issue with %-logging when logging can be configured for % logging.
    "S101",    # Use of assert here is a known quantity. Blame typing memes.
    "PLR2004", # Magic value comparison. May remove later.
    "SIM105",  # Suppressable exception. contextlib.suppress is a stylistic choice with overhead.
    "C90",     # McCabe complexity memes.
    "PLR",     # More complexity things.
    "ANN101",  # Type of Self for self is implicit.
    "ANN102",  # Type of type[Self] for cls is implicit.
    "ANN401",  # Need Any for args and kwargs in some places.
    "A003",    # Shadowing some builtin names.
    # False positive for __exit__ annotations when using any placeholders in a type checking block's else clause.
    "PYI036",
    # Recommended by Ruff when using Ruff format.
    "E111",
    "E114",
    "E117",
    "Q003",
    "COM812",
    "COM819",
    # "E501",
    "ISC001",
    "ISC002",
]
unfixable = [
    "ERA", # I don't want anything erroneously detected deleted by this.
]

[tool.ruff.lint.per-file-ignores]
"examples/*.py" = ["INP001", "T201"]     # Leave the examples alone.
"tests/*.py" = ["INP001", "T201", "ANN"] # Leave the tests alone.

[tool.ruff.lint.isort]
lines-after-imports = 2
combine-as-imports = true

[tool.pyright]
include = ["fichub_api"]
ignore = ["tests"]
venvPath = "."
venv = ".venv"

pythonVersion = "3.8"
typeCheckingMode = "strict"
reportPropertyTypeMismatch = "warning"
reportUnnecessaryTypeIgnoreComment = "warning"
